# tmax-opsd-v1

./: .gitignore  README.md  pyproject.toml
configs/: tmax_opsd_pure.toml  tmax_opsd_validation.toml
data/demos/: task_000000_c19dda5b.md  task_000000_f8baca82.md  task_000001_1a03ebc5.md  task_000001_e67d5628.md  task_000002_81d660f3.md  task_000002_8be5378a.md  task_000003_2a1af405.md  task_000003_b73a4413.md  task_000004_aeddda76.md  task_000004_b4949f3f.md  task_000005_162ed362.md  task_000005_ceefb305.md  task_000006_74a36316.md  task_000006_93ea43e6.md  task_000007_654ab1c7.md  task_000007_eadb8636.md  task_000008_e94be48f.md  task_000009_8e53cc34.md  task_000009_dbc34e08.md  task_000010_7c427a6f.md  task_000010_e7b016b0.md  task_000011_24e54d45.md  task_000011_b3a63e5b.md  task_000012_58fdcccc.md  task_000012_bcc9081e.md  task_000013_df6cd2ad.md  task_000014_3d9789ba.md  task_000014_a15a2b8a.md  task_000015_6615e8e8.md  task_000015_802ac83d.md  task_000016_3ffaf505.md  task_000016_6eb64181.md  task_000017_0ba5f186.md  task_000017_75ba7ed9.md  task_000018_3997ce32.md  task_000018_42ce2436.md  task_000019_9b7bd652.md  task_000019_d40ae014.md  task_000020_3c0b25ea.md  task_000020_bdaab293.md  (+9919 more)
scripts/: prepare_data.py
scripts/hintgen/: RESUME.md  assemble_demos.py  gate.py  hint_instructions.md  hint_workflow.js  slice_remaining.py
tests/: conftest.py  test_e2e_docker.py  test_full_data.py  test_loading.py  test_parsing.py  test_prepare_data.py  test_program.py  test_taskset.py
tmax_opsd_v1/: __init__.py  build.py  harness.py  parsing.py  program.py  taskset.py
(+1 files in other folders)
