[project]
name = "tmax-opsd-v1"
version = "0.2.0"
description = "TMax terminal tasks as a verifiers-v1 environment with a TMax-faithful vanillux harness, built for OPSD experiments."
tags = ["train", "eval", "terminal", "agent", "tmax", "opsd"]
requires-python = ">=3.11,<3.14"
# verifiers v1 is pre-release-only, and its pre-release-only transitive deps
# (renderers, prime-pydantic-config) are NOT auto-enabled by a default resolve —
# uv/pip only enables a pre-release when it's named in a DIRECT requirement. Pinning
# them here lets the Hub's flag-less `uv pip install` into a fresh venv resolve the
# whole tree (verified in a clean venv). Local dev still uses [tool.uv] prerelease.
dependencies = [
    "verifiers>=0.2.1.dev22",
    "renderers>=0.1.8.dev40",
    "prime-pydantic-config>=0.3.0.dev86",
    "pyarrow",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

# verifiers (and its `renderers` dep) are published as pre-releases; allow them so
# `uv sync` resolves without a flag. The Hub's `uv pip install` enables pre-releases
# on its own test machine (every verifiers env depends on these).
[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmax_opsd_v1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["docker: needs local Docker + pulls a real TMax image (slow)"]
addopts = "-m 'not docker'"
